# DDD-and-FastAPI

./: .env  .env.test  .flake8  .gitignore  README.md  aiosqlite  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
docker/: .env  Dockerfile  Makefile  docker-compose-local.yml  docker-compose.yml  entrypoint.sh
scripts/: celery.sh
src/: __init__.py  app.py  config.py  main.py
src/celery/: celery_app.py  celery_app_config.py  config.py  utils.py
src/celery/tasks/: users_tasks.py
src/core/: bootstrap.py  constants.py  exceptions.py  messagebus.py  utils.py
src/core/database/: config.py  connection.py  metadata.py
src/core/interfaces/: __init__.py  commands.py  events.py  handlers.py  messages.py  models.py  repositories.py  units_of_work.py
src/core/redis/: config.py  connection.py
src/security/: config.py  constants.py  exceptions.py  models.py  utils.py
src/users/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  service.py  utils.py
src/users/adapters/: orm.py  repositories.py
src/users/domain/: commands.py  events.py  models.py
src/users/entrypoints/: dependencies.py  router.py  schemas.py  views.py
src/users/interfaces/: __init__.py  handlers.py  repositories.py  units_of_work.py
src/users/service_layer/: service.py  units_of_work.py
templates/: base.html
templates/email_templates/: email_base.html  vote_for_user_email.html
tests/: config.py  conftest.py  utils.py
tests/core/: fake_objects.py
tests/users/: fake_objects.py  utils.py
(+29 files in other folders)
