[project]
name = 'DDD and FastAPI'

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_any_generics = false
check_untyped_defs = true
warn_return_any = false
ignore_missing_imports = false
disable_error_code = ['empty-body', 'method-assign']
exclude = ['alembic/']

# Avoiding "skipping analyzing 'celery' error":
[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

# Avoiding incorrect 'override' error:
[[tool.mypy.overrides]]
module = [
    "src.users.interfaces.repositories",
    "src.users.adapters.repositories",
    "src.users.service_layer.handlers.*",
    "tests.users.fake_objects",
]
disable_error_code = ["override"]

# Avoiding incorrect 'misc' error during dependency injection to event-handlers and command-handlers:
[[tool.mypy.overrides]]
module = "src.core.bootstrap"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = [
    'tests',
]
